<resources>
    <string name="app_name">Student Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="sharing">Sharing</string>
    <string name="notifications">Notifications</string>
    <string name="welcome">Welcome to the Student Scheduler!</string>
    <string name="go">Let\'s get Started</string>
    <string name="start_notifications">Notification for Start</string>
    <string name="end_notifications">Notification for End</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification Channel Description</string>
    <string name="title_activity_term">Terms</string>
    <string name="title_activity_assessment_detail">Assessment</string>
    <string name="title_activity_course">Term Detail</string>
    <string name="title_activity_assessment">Course Detail</string>
    <string name="title_associated_courses">Associated Courses</string>
    <string name="title_associated_assessments">Associated Assessments</string>
    <string name="term_name">Term Name</string>
    <string name="enter_term_name">Enter Term Name</string>
    <string name="course_name">Course Name</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="save_btn">Save</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="select_date_btn">Select Date</string>
    <string name="status">Status</string>
    <string name="edit_status">Enter Status</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="edit_mentor_name">Enter Mentor Name</string>
    <string name="phone">Phone</string>
    <string name="edit_phone">Enter Phone</string>
    <string name="email">Email</string>
    <string name="edit_email">Enter Email</string>
    <string name="notes">Notes</string>
    <string name="edit_notes">Enter Notes</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="enter_assessment_name">Enter Assessment Name</string>
    <string name="due_date">Due Date</string>
    <string-array name="status_array">
        <item>Plan to Take</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_home">Home</string>

</resources>
